--- a/index.html
+++ b/index.html
@@ -1,59 +1,156 @@
 <!DOCTYPE html>
 <html lang="sl">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Petar – Varnostna kartica / Safety Card</title>
+  <meta name="description" content="Tap-to-call safety card for Petar (Slovenian & English).">
   <style>
-    :root{ --bg:#0b0b0b; --card:#ffffff; --accent:#ff6600; --text:#111; --muted:#666; }
-    *{box-sizing:border-box} html,body{height:100%}
-    body{ margin:0; font-family: system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, Arial;
-      background: var(--bg); color: var(--text); display:flex; align-items:center; justify-content:center; padding:22px; }
-    .card{ background: var(--card); width:min(900px, 100%); border-radius:24px; padding:22px; box-shadow: 0 10px 40px rgba(0,0,0,.35); border: 6px solid var(--accent); }
-    .grid{ display:grid; grid-template-columns: 250px 1fr; gap:20px; }
-    .photo{ width:100%; border-radius:18px; border:4px solid var(--accent); overflow:hidden; background:#ddd; }
-    .photo img{ width:100%; height:100%; display:block; object-fit:cover; aspect-ratio: 3/4; }
-    h1{ margin:0 0 6px 0; font-size: clamp(28px, 5vw, 44px); color:#111; letter-spacing: .3px; }
-    .subtitle{ margin:0 0 14px 0; font-size: clamp(16px, 3.2vw, 22px); color: var(--muted); font-weight:700; }
-    .notice{ display:grid; gap:10px; margin: 12px 0 16px 0; }
-    .badge{ display:inline-block; background: var(--accent); color:#fff; font-weight:900; padding:4px 10px; border-radius:999px; font-size:14px; letter-spacing:.4px; }
-    .text{ font-size: clamp(18px, 2.9vw, 26px); line-height:1.3; font-weight: 780; color:#111; }
-    .phones{ display:grid; grid-template-columns: repeat(auto-fit, minmax(220px,1fr)); gap:12px; }
-    .btn{ display:flex; align-items:center; justify-content:center; gap:10px; padding:16px 16px; background:#111; color:#fff; text-decoration:none; border-radius:16px; font-weight:900; font-size: clamp(16px, 2.4vw, 20px); box-shadow: 0 6px 18px rgba(0,0,0,.18); border:2px solid #111; }
-    .btn .sub{ font-weight:700; opacity:.95 } .btn.light{ background:#fff; color:#111; border-color:#ddd }
-    .footer{ margin-top:16px; color:#555; font-size:13px; }
-    .lang{ display:grid; gap:18px; margin-top:8px; }
-    @media (max-width:760px){ .grid{grid-template-columns:1fr} .photo img{aspect-ratio: 16/9} }
+    :root{
+      --bg:#0b0b0b;
+      --surface:#ffffff;
+      --accent:#ff6600;
+      --text:#111;
+      --muted:#666;
+      --radius:20px;
+    }
+    /* Base */
+    *{box-sizing:border-box}
+    html, body{
+      padding:0; margin:0;
+      background:var(--bg);
+      color:var(--text);
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Arial, "Apple Color Emoji","Segoe UI Emoji";
+      line-height:1.35;
+    }
+    /* Page container – scrolls naturally */
+    .page{
+      max-width: 960px;
+      margin: 0 auto;
+      padding: 16px;
+    }
+    /* Card */
+    .card{
+      background:var(--surface);
+      border:6px solid var(--accent);
+      border-radius:24px;
+      box-shadow: 0 10px 40px rgba(0,0,0,.28);
+      padding:16px;
+    }
+    /* Header image – full width on mobile */
+    .photo{
+      width:100%;
+      border-radius:16px;
+      overflow:hidden;
+      border:4px solid var(--accent);
+      background:#ddd;
+      margin-bottom:16px;
+    }
+    .photo img{
+      display:block;
+      width:100%;
+      height:auto;        /* keep full image, no crop */
+    }
+    /* Headings/Text */
+    h1{
+      font-size: clamp(26px, 6vw, 42px);
+      margin: 4px 0 6px 0;
+    }
+    .subtitle{
+      color:var(--muted);
+      font-weight:700;
+      margin: 0 0 16px 0;
+      font-size: clamp(15px, 3.5vw, 20px);
+    }
+    .badge{
+      background:var(--accent);
+      color:#fff;
+      padding: 3px 10px;
+      border-radius:999px;
+      font-weight:900;
+      font-size: 13px;
+      margin-right:8px;
+    }
+    .block{
+      background:#fafafa;
+      border:1px solid #eee;
+      border-radius: var(--radius);
+      padding:14px;
+      margin: 10px 0 16px 0;
+    }
+    .text{
+      font-size: clamp(18px, 4.5vw, 24px);
+      font-weight:800;
+      margin: 0 0 12px 0;
+      color:#111;
+    }
+    /* Phone buttons – large tap targets, 100% width */
+    .phones{
+      display:grid;
+      grid-template-columns: 1fr;
+      gap:10px;
+    }
+    .btn{
+      display:flex; align-items:center; justify-content:space-between;
+      padding:16px;
+      width:100%;
+      background:#111; color:#fff; text-decoration:none;
+      border-radius:16px;
+      font-weight:900;
+      font-size: clamp(16px, 4vw, 20px);
+      border:2px solid #111;
+      box-shadow: 0 6px 16px rgba(0,0,0,.18);
+    }
+    .btn.light{ background:#fff; color:#111; border-color:#ddd }
+    .btn .label{opacity:.95}
+    .btn .num{font-feature-settings: 'tnum'; letter-spacing:.5px}
+    /* Footer note */
+    .footer{
+      color:#555; font-size:13px; margin-top: 6px; margin-bottom: 6px;
+    }
+    /* Larger screens – simple two-column layout */
+    @media (min-width: 860px){
+      .content{
+        display:grid; grid-template-columns: 340px 1fr; gap:18px;
+      }
+    }
+    /* Make sure page always scrolls */
+    .spacer{height: 10px}
   </style>
 </head>
 <body>
-  <main class="card">
-    <div class="grid">
-      <figure class="photo">
-        <img src="./petar.png" alt="Petar – fotografija" />
-      </figure>
-      <div>
-        <h1>Petar</h1>
-        <p class="subtitle"><span class="badge">INFO</span> Varnostna kartica / Safety Card</p>
-        <section class="lang">
-          <div class="notice">
-            <div class="text">Živjo, jaz sem Petar in imam avtizem. Izgubil sem se. Prosim, pokliči moje starše.</div>
+  <div class="page">
+    <div class="card">
+      <div class="content">
+        <figure class="photo">
+          <img src="./petar.png" alt="Petar – fotografija">
+        </figure>
+
+        <div>
+          <h1>Petar</h1>
+          <p class="subtitle"><span class="badge">INFO</span> Varnostna kartica / Safety Card</p>
+
+          <section class="block">
+            <p class="text">Živjo, jaz sem Petar in imam avtizem. Izgubil sem se. Prosim, pokliči moje starše.</p>
             <div class="phones">
-              <a class="btn" href="tel:+38670512554">Pokliči mamo • <span class="sub">+386 70 512 554</span></a>
-              <a class="btn" href="tel:+38670149037">Pokliči očeta • <span class="sub">+386 70 149 037</span></a>
+              <a class="btn" href="tel:+38670512554"><span class="label">Pokliči mamo</span> <span class="num">+386 70 512 554</span></a>
+              <a class="btn" href="tel:+38670149037"><span class="label">Pokliči očeta</span> <span class="num">+386 70 149 037</span></a>
             </div>
-          </div>
-          <div class="notice">
-            <div class="text">Hello, my name is Petar and I have autism. I am lost. Please call my parents.</div>
+          </section>
+
+          <section class="block">
+            <p class="text">Hello, my name is Petar and I have autism. I am lost. Please call my parents.</p>
             <div class="phones">
-              <a class="btn light" href="tel:+38670512554">Call Mom • <span class="sub">+386 70 512 554</span></a>
-              <a class="btn light" href="tel:+38670149037">Call Dad • <span class="sub">+386 70 149 037</span></a>
+              <a class="btn light" href="tel:+38670512554"><span class="label">Call Mom</span> <span class="num">+386 70 512 554</span></a>
+              <a class="btn light" href="tel:+38670149037"><span class="label">Call Dad</span> <span class="num">+386 70 149 037</span></a>
             </div>
-          </div>
-        </section>
-        <p class="footer">Če si našel to kartico ali Petar potrebuje pomoč, prosimo pokliči čim prej. / If you found this card or Petar needs help, please call immediately.</p>
+          </section>
+
+          <p class="footer">Če si našel to kartico ali Petar potrebuje pomoč, prosimo pokliči čim prej. / If you found this card or Petar needs help, please call immediately.</p>
+        </div>
       </div>
     </div>
-  </main>
+    <div class="spacer"></div>
+  </div>
 </body>
 </html>
