--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
       --muted:#666;
     }
     *{box-sizing:border-box}
-    html, body{ margin:0; padding:0; background:var(--bg); color:var(--text);
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Arial, 'Apple Color Emoji','Segoe UI Emoji'; }
+    html, body{
+      margin:0; padding:0;
+      background:var(--bg);
+      color:var(--text);
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Arial, 'Apple Color Emoji','Segoe UI Emoji';
+    }
     .page{ max-width: 960px; margin:0 auto; padding:12px; }
     .card{
       background:var(--surface);
@@ -31,28 +35,37 @@
       border:4px solid var(--accent);
       background:#000;
       margin-bottom:14px;
+      text-align:center;
     }
-    /* KEY: show full image, never crop */
+    /* Centered, full visible image */
     .photo img{
       display:block;
-      width:100%;
-      height:auto;           /* keeps full image height */
-      object-fit: contain;   /* do not crop */
-      background-color:#000; /* in case aspect ratio leaves bars */
+      margin:0 auto;
+      max-width:100%;
+      height:auto;
+      object-fit:contain;
+      background-color:#000;
     }
-    h1{ font-size: clamp(26px, 6vw, 42px); margin: 6px 0 6px 0; }
-    .subtitle{ color:var(--muted); font-weight:700; margin: 0 0 16px 0; font-size: clamp(15px, 3.5vw, 20px); }
+    h1{ font-size: clamp(26px, 6vw, 42px); margin: 6px 0 6px 0; text-align:center; }
+    .subtitle{ color:var(--muted); font-weight:700; margin: 0 0 16px 0; font-size: clamp(15px, 3.5vw, 20px); text-align:center; }
     .badge{ background:var(--accent); color:#fff; padding: 3px 10px; border-radius:999px; font-weight:900; font-size: 13px; margin-right:8px; }
     .block{ background:#fafafa; border:1px solid #eee; border-radius: 18px; padding:14px; margin: 10px 0 16px 0; }
-    .text{ font-size: clamp(18px, 4.5vw, 24px); font-weight:800; margin: 0 0 12px 0; color:#111; }
+    .text{ font-size: clamp(18px, 4.5vw, 24px); font-weight:800; margin: 0 0 12px 0; color:#111; text-align:center; }
     .phones{ display:grid; grid-template-columns: 1fr; gap:10px; }
-    .btn{ display:flex; align-items:center; justify-content:space-between; padding:16px; width:100%;
-      background:#111; color:#fff; text-decoration:none; border-radius:16px; font-weight:900; font-size: clamp(16px, 4vw, 20px); border:2px solid #111; box-shadow: 0 6px 16px rgba(0,0,0,.18); }
+    .btn{
+      display:flex; align-items:center; justify-content:space-between;
+      padding:16px; width:100%;
+      background:#111; color:#fff; text-decoration:none;
+      border-radius:16px; font-weight:900; font-size: clamp(16px, 4vw, 20px);
+      border:2px solid #111; box-shadow: 0 6px 16px rgba(0,0,0,.18);
+    }
     .btn.light{ background:#fff; color:#111; border-color:#ddd }
-    .btn .label{opacity:.95} .btn .num{font-feature-settings: 'tnum'; letter-spacing:.5px}
-    .footer{ color:#555; font-size:13px; margin-top: 6px; margin-bottom: 6px; }
+    .btn .label{opacity:.95}
+    .btn .num{font-feature-settings:'tnum'; letter-spacing:.5px}
+    .footer{ color:#555; font-size:13px; margin-top: 6px; margin-bottom: 6px; text-align:center; }
     @media (min-width: 860px){
-      .content{ display:grid; grid-template-columns: 360px 1fr; gap:16px; }
+      .content{ display:grid; grid-template-columns: 360px 1fr; gap:16px; align-items:start; }
+      .text, h1, .subtitle, .footer{text-align:left;}
     }
   </style>
 </head>
@@ -61,7 +74,7 @@
     <div class="card">
       <div class="content">
         <figure class="photo">
-          <img src="./petar.png" alt="Petar – fotografija (full, no crop)">
+          <img src="./petar.png" alt="Petar – fotografija (centred, full visible)">
         </figure>
 
         <div>
