--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
       --text:#111;
       --muted:#666;
     }
-    *{box-sizing:border-box;max-width:100%;}
-    html, body{ 
-      margin:0; padding:0; 
+    *{box-sizing:border-box}
+    html, body{
+      margin:0; padding:0;
       background:var(--bg); color:var(--text);
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Arial, 'Apple Color Emoji','Segoe UI Emoji'; 
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Arial, 'Apple Color Emoji','Segoe UI Emoji';
       overflow-x:hidden;
     }
     .page{ max-width: 960px; margin:0 auto; padding:12px; }
@@ -27,36 +27,31 @@
       border-radius:24px;
       box-shadow: 0 10px 40px rgba(0,0,0,.28);
       padding:12px;
-      overflow:hidden;
     }
-    /* PHOTO BLOCK (hard fix centered, no overflow) */
+    /* IMAGE WRAPPER */
     .photo{
       width:100%;
-      margin-inline:auto;
-      margin-top:0;
-      margin-bottom:14px;
+      margin:0 auto 16px auto;
       border:4px solid var(--accent);
-      border-radius:16px;
+      border-radius:18px;
       background:#000;
+      overflow:hidden;      /* clip inner image corners */
+      display:block;
       text-align:center;
-      overflow:hidden;
-      max-width:100%;
-      transform:translateX(0);
     }
     .photo img{
       display:block;
-      margin-inline:auto;
-      max-width:100%;
-      height:auto;
-      object-fit:contain;
-      transform:translateX(0);
-      background-color:#000;
+      width:100%;           /* fill wrapper width */
+      height:auto;          /* preserve aspect */
+      object-fit:contain;   /* never crop */
+      margin:0 auto;        /* center horizontally */
+      border-radius:12px;   /* soften inner corners to avoid visual offset */
     }
-    h1{ font-size: clamp(26px, 6vw, 42px); margin: 6px 0 6px 0; text-align:center; }
-    .subtitle{ color:var(--muted); font-weight:700; margin: 0 0 16px 0; font-size: clamp(15px, 3.5vw, 20px); text-align:center; }
+    h1{ font-size: clamp(26px, 6vw, 42px); margin: 6px 0 6px 0; text-align:left; padding:0 6px; }
+    .subtitle{ color:var(--muted); font-weight:700; margin: 0 0 16px 0; font-size: clamp(15px, 3.5vw, 20px); padding:0 6px;}
     .badge{ background:var(--accent); color:#fff; padding: 3px 10px; border-radius:999px; font-weight:900; font-size: 13px; margin-right:8px; }
     .block{ background:#fafafa; border:1px solid #eee; border-radius: 18px; padding:14px; margin: 10px 0 16px 0; }
-    .text{ font-size: clamp(18px, 4.5vw, 24px); font-weight:800; margin: 0 0 12px 0; color:#111; text-align:center; }
+    .text{ font-size: clamp(18px, 4.5vw, 24px); font-weight:800; margin: 0 0 12px 0; color:#111; }
     .phones{ display:grid; grid-template-columns: 1fr; gap:10px; }
     .btn{
       display:flex; align-items:center; justify-content:space-between;
@@ -68,14 +63,14 @@
     .btn.light{ background:#fff; color:#111; border-color:#ddd }
     .btn .label{opacity:.95}
     .btn .num{font-feature-settings:'tnum'; letter-spacing:.5px}
-    .footer{ color:#555; font-size:13px; margin-top: 6px; margin-bottom: 6px; text-align:center; }
+    .footer{ color:#555; font-size:13px; margin-top: 6px; margin-bottom: 6px; }
   </style>
 </head>
 <body>
   <div class="page">
     <div class="card">
       <figure class="photo">
-        <img src="./petar.png" alt="Petar – fotografija (centered hard fix)">
+        <img src="./petar.png" alt="Petar – fotografija (centred, full)">
       </figure>
 
       <h1>Petar</h1>
